--- a/Android ICS Clock/index.html
+++ b/Android ICS Clock/index.html
@@ -14,7 +14,7 @@
 	NOTE:
 	This Javascript widget is specifically designed for 
 	the widget engine preinstalled in the Samsung GT-S3653 
-	phone model. Using it elsewhere needs some modifications.
+	phone model. Using it elsewhere needs modifications.
 	-->
 
 	<style type="text/css">
